--- a/style.css
+++ b/style.css
@@ -5,4 +5,5 @@ Author URI: https://gg-dev.co/
 Version: 1.0.22
 Description: Advanced Care custom WordPress theme
 Text Domain: advancedcare
+GitHub Theme URI: https://github.com/ghgamble/advancedcare
 */
