adjust footer logo

--- a/assets/scss/components/_footer.scss
+++ b/assets/scss/components/_footer.scss
@@ -26,6 +26,9 @@ footer {
         text-decoration: none;
         font-size: 1.5rem;
         font-weight: bold;
+        img {
+          max-width: 90% !important;
+        }
       }
     }
   
