--- a/assets/scss/components/_header.scss
+++ b/assets/scss/components/_header.scss
@@ -36,6 +36,10 @@ header.site-header {
 
     li {
       position: relative;
+      
+      .submenu-toggle {
+        display: none;
+      }
 
       a {
         color: #fff;
